frontend bootstrap & scss

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,8 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Kerkel</h1>
+<p>This time powered by express.js</p>
+
+<ul>
+    <li>
+        <a href="/kerkel?script=dev">just testing for now</a>
+    </li>
+</ul>
