--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="/assets/kerkel.js"></script>
+    <title>Kerkel</title>
+    <link rel='stylesheet' href='/assets/kerkel.css' />
+
 </head>
-<body>
+<body class="{{body_class}}">
 {{{body}}}
 </body>
 </html>
