--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,6 +3,6 @@
 
 <ul>
     <li>
-        <a href="/kerkel?script=dev">just testing for now</a>
+        <a href="/kerkel?script=random">just testing for now</a>
     </li>
 </ul>
