--- a/views/kerkel.hbs
+++ b/views/kerkel.hbs
@@ -3,10 +3,6 @@
 <br>
 </div>
 
-<div id="kerkel-app">
-    <div class="k-app-container">
-        fdfasdf
-    </div>
-</div>
+<div id="kerkel-app"></div>
 
 <script src="/assets/kerkel_app.js"></script>
