--- a/frontend/styles/kerkel_app.scss
+++ b/frontend/styles/kerkel_app.scss
@@ -40,6 +40,167 @@ body.full-height {
   justify-content: center;
 
   .k-app-container {
+    height: rem-calc($k-app-height);
+  }
+
+  .k-panel {
+    box-shadow: inset 0 0 #{$k-panel-margin}px $k-panel-contrast-color;
+    padding: rem-calc($k-panel-margin);
+    background-color: $k-panel-bg-color;
+    line-height: 1;
+  }
+
+  .k-window {
+    position: absolute;
+    z-index: 10;
+    background-color: $k-panel-bg-color;
+    color: $k-panel-contrast-color;
+
+    input, select {
+      margin-bottom: rem-calc($k-panel-margin);
+    }
+
+    .callout {
+      margin-bottom: 0;
+    }
+
+    p {
+      font-size: 80%;
+      line-height: 1.1em;
+    }
+
+    a {
+      color: $k-panel-contrast-color;
+    }
+
+    > .k-window-close {
+      position: absolute;
+      top: rem-calc(0);
+      right: rem-calc(0);
+      background-color: $k-panel-bg-color;
+      border: 2px solid $k-panel-bg2-color;
+      &:hover {
+        color: $k-panel-bg-color;
+        background-color: $k-panel-contrast-color;
+      }
+    }
+  }
+
+
+  .k-left-panel {
+    float: left;
+    width: rem-calc($k-left-panel-width);
+    padding-right: rem-calc($k-panel-margin);
+  }
+
+  .k-wins-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+  }
+
+  .k-board-container {
+    height: 100%;
+    margin-left: rem-calc($k-left-panel-width);
+    min-width: rem-calc(300);
+  }
+
+  // -----------------------------------------
+
+  .k-menu {
+    height: rem-calc($k-menu-height);
+    > button {
+      $_width: ($k-left-panel-width - 2*$k-panel-margin) / 3;
+      width: rem-calc($_width - 2);
+      height: rem-calc($k-menu-height);
+      margin-right: rem-calc($k-panel-margin);
+      &:last-of-type{ margin-right: 0; }
+    }
+    margin-bottom: rem-calc($k-panel-margin);
+  }
+
+  .k-users-list {
+    height: rem-calc($k-users-list-height);
+    margin-bottom: rem-calc($k-panel-margin);
+    word-wrap: break-word;
+    overflow-y: auto;
+    background-color: $k-panel-bg2-color;
+
+    .k-user {
+      border-top: 1px solid $k-panel-bg-color;
+      &:first-of-type { border-top: none; }
+
+      font-size: 80%;
+      font-weight: bold;
+      padding: rem-calc(3 0 3 0);
+
+      ._status {
+        margin: rem-calc(0 5);
+        background-color: #a8a864;
+        &._online { background-color: #7ca511; }
+      }
+    }
+  }
+
+  .k-messages-list {
+    height: rem-calc($k-messages-list);
+    overflow-y: auto;
+    background-color: $k-panel-bg2-color;
+    margin-bottom: rem-calc($k-panel-margin);
+    color: $k-panel-contrast-color;
+    font-size: 75%;
+
+    > div {
+      padding: rem-calc(2);
+      word-break: break-all;
+      > span {
+        font-weight: bold;
+        margin-right: rem-calc(3);
+      }
+    }
+
+    &._not_connected {
+      position: relative;
+      text-align: center;
+      color: $k-panel-contrast-color;
+      > span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+
+  .k-chat-input {
+    line-height: rem-calc($k-chat-input-height);
+    $_btn_width: $k-chat-input-height;
+
+    > button {
+      float: left;
+      font-weight: bold;
+      width: rem-calc($_btn_width);
+      margin: 0;
+      height: rem-calc($k-chat-input-height);
+    }
+
+    > input {
+      font-size: 80%;
+      margin: 0;
+      margin-left: rem-calc($_btn_width);
+      padding: rem-calc(2);
+      width: rem-calc($k-left-panel-width - $_btn_width - $k-panel-margin);
+      height: rem-calc($k-chat-input-height);
+      border: none;
+      box-shadow: none;
+      background-color: $k-panel-bg2-color;
+      color: $k-panel-contrast-color;
+      &:focus {
+        border: none;
+        box-shadow: none;
+        background-color: $k-panel-bg2-color;
+      }
+    }
   }
 
 }
