--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -1,8 +1,9 @@
 // Core variables and mixins
+
+@import "./helper_functions";
+@import "./setup";
 @import "variables";
 @import "mixins";
-
-@import "./setup";
 
 // Reset and dependencies
 @import "normalize";
@@ -31,12 +32,12 @@
 //@import "pagination";
 //@import "badge";
 //@import "jumbotron";
-//@import "alert";
+@import "alert";
 //@import "progress";
 //@import "media";
 //@import "list-group";
 //@import "responsive-embed";
-@import "close";
+//@import "close";
 
 // Components w/ JavaScript
 //@import "modal";
@@ -47,5 +48,7 @@
 // Utility classes
 @import "utilities";
 
-@import "./helper_functions";
+@import "./overrides";
+
+
 @import "./kerkel_app";
