--- a/frontend/styles/kerkel_app.scss
+++ b/frontend/styles/kerkel_app.scss
@@ -1,17 +1,3 @@
-$k-panel-bg-color: #000000;
-$k-panel-bg2-color: #303030;
-$k-text-color: #f5f2f2;
-$k-contrast-color: #777777;
-$k-panel-margin: 5;
-
-$k-menu-height: 40;
-$k-chat-input-height: 20;
-$k-app-height: $k-menu-height + 400 + $k-chat-input-height;
-$k-left-panel-width: 200;
-
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-$k-font: Roboto, sans-serif;
-
 html {
   height: 100%;
 }
@@ -63,13 +49,19 @@ body.full-height {
     }
   }
 
+  .k-content {
+    flex: 1 1;
+    display: flex;
+    align-items: stretch;
+  }
+
   .k-board-container {
     flex: 1 1;
   }
 
   .k-wins-container {
     position: relative;
-    flex: 0 0 0;
+    height: 0;
   }
 
   // -----------------------------------------
@@ -86,10 +78,6 @@ body.full-height {
     z-index: 10;
     background-color: $k-panel-bg-color;
     color: $k-text-color;
-
-    input, select {
-      margin-bottom: rem-calc($k-panel-margin);
-    }
 
     .callout {
       margin-bottom: 0;
@@ -116,28 +104,6 @@ body.full-height {
         background-color: $k-contrast-color;
       }
     }
-  }
-
-  .button {
-    @extend .btn;
-    line-height: 1;
-    @include button-size(rem-calc($k-panel-margin), rem-calc($k-panel-margin), $font-size-base, 0);
-    background-color: $k-panel-bg2-color;
-    color: $k-text-color;
-    border-color: $k-text-color;
-
-    &:hover {
-      cursor: pointer;
-      background-color: $k-contrast-color;
-    }
-
-    &:active,
-    &.active {
-      background-image: none;
-      @include box-shadow(none);
-    }
-
-    &.tiny { font-size: $font-size-xs; }
   }
 
   // -----------------------------------------
@@ -220,19 +186,16 @@ body.full-height {
     }
 
     > input {
-      display: inline-block;
       flex: 1 1;
       font-size: $font-size-xs;
       margin: 0;
       min-width: 1px;
       padding: rem-calc(2);
       border: none;
-      outline: none;
       background-color: $k-panel-bg2-color;
       color: $k-text-color;
       &:focus {
         border: none;
-        outline: none;
         background-color: $k-panel-bg2-color;
       }
     }
