--- a/frontend/styles/kerkel_app.scss
+++ b/frontend/styles/kerkel_app.scss
@@ -53,6 +53,7 @@ body.full-height {
     flex: 1 1;
     display: flex;
     align-items: stretch;
+    flex-direction: column;
   }
 
   .k-board-container {
